# LLM-Chatbot

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
llm-api-frontend/: Dockerfile  index.html  package-lock.json  package.json
llm-api-frontend/src/: App.tsx  index.css
llm-api-frontend/src/components/: ChatResults.tsx  CompareResults.tsx  ErrorMessage.tsx  InputSection.tsx  Loading.tsx  ModeSelector.tsx  ResponseCard.tsx
llm-api-frontend/src/services/: api.ts
llm-api-frontend/src/types/: index.ts
llm_api/: config.py  main.py
llm_api/dependencies/: auth.py
llm_api/models/: repository.py
llm_api/services/: chat_service.py  comparison.py
llm_api/utils/: logger.py
llm_app/: config.py  main.py
tests/: test_chat.py
