[project]
name = "llm-api"
version = "0.1.0"
description = "LLM-based API with FastAPI, optional RAG support"
authors = [
    {name = "jiajingf"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "anthropic (>=0.67.0,<0.68.0)",
    "openai (>=1.107.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
